Bug 481640 - KCM defaults not working
Summary: KCM defaults not working
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwintabbox (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-21 21:58 UTC by duha.bugs
Modified: 2024-02-29 15:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description duha.bugs 2024-02-21 21:58:39 UTC
STEPS TO REPRODUCE
1. Open System settings -> Window management -> Task switcher (Main)
2. Click defaults (enable default settings)

OBSERVED RESULT
No more visual task switcher (switching tasks still works, just no visuals. Settings page also does not update)

EXPECTED RESULT
"Thumbnail Grid" is used as approved here:
https://invent.kde.org/plasma/plasma-desktop/-/issues/53

ADDITIONAL INFORMATION
Couldn't find the correct kcm on the bug tracker nor on invent.
Comment 1 Doug 2024-02-22 06:46:03 UTC
Cannot reproduce.  What operating system, versions, etc are you using?

For example:
Operating System: KDE neon Testing Edition
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-18-generic (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon Pro WX 3200 Series
Comment 2 Nate Graham 2024-02-22 16:43:51 UTC
Can reproduce. Clicking the Defaults button adds the following to kwinrc:

LayoutName=org.kde.breeze.desktop

Which fails, because that tabbox was renamed to "sidebars"
Comment 3 Bug Janitor Service 2024-02-28 15:57:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3983
Comment 4 Bug Janitor Service 2024-02-29 10:23:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5327
Comment 5 Marco Martin 2024-02-29 11:14:34 UTC
Git commit 86ede0ecf270dd99cf1bceb36637d5fc35335cac by Marco Martin.
Committed on 29/02/2024 at 11:14.
Pushed by mart into branch 'master'.

Remove invalid tabbox configs from defaults

We know that org.kde.breeze.desktop is invalid as LayoutName for the
tabbox, it will break the default button in the tabbox kcm.
Also the DesktopListLayout and DesktopLayout aren't valid anymore

M  +5    -0    kconf_update/CMakeLists.txt
A  +40   -0    kconf_update/kwin-6.0-remove-breeze-tabbox-default.cpp     [License: GPL(v2.0+)]
M  +4    -0    kconf_update/kwin.upd

https://invent.kde.org/plasma/kwin/-/commit/86ede0ecf270dd99cf1bceb36637d5fc35335cac
Comment 6 Marco Martin 2024-02-29 11:37:32 UTC
Git commit 69b64ef78d5ecd95142a203732f123631a75f77c by Marco Martin.
Committed on 29/02/2024 at 11:25.
Pushed by mart into branch 'Plasma/6.0'.

Remove invalid tabbox configs from defaults

We know that org.kde.breeze.desktop is invalid as LayoutName for the
tabbox, it will break the default button in the tabbox kcm.
Also the DesktopListLayout and DesktopLayout aren't valid anymore

M  +5    -0    kconf_update/CMakeLists.txt
A  +40   -0    kconf_update/kwin-6.0-remove-breeze-tabbox-default.cpp     [License: GPL(v2.0+)]
M  +4    -0    kconf_update/kwin.upd

https://invent.kde.org/plasma/kwin/-/commit/69b64ef78d5ecd95142a203732f123631a75f77c